results/SVCOMP/4-shot/log-ExSymExeSwitch-2024_03_18_22_39_01.txt
class Main {

  //@ ensures \result <==> x > 0;
  //@ ensures !\result ==> test(x);
  public static boolean f(int x) {
    if (x > 0) return true;
    return test(x);
  }
  
  //@ ensures \result <==> x == 2;
  //@ ensures !\result ==> x == 3000;
  //@ ensures \result ==> System.out.println("branch Foo2");
  //@ ensures !\result ==> System.out.println("branch Foo3000") || System.out.println("default2");
  public static boolean test(int x) {
    x = x + 1;
    switch (x) {
      case 2:
        System.out.println("branch Foo2");
        return false;
      case 3000:
        System.out.println("branch Foo3000");
        break;
      default:
        System.out.println("default2");
        break;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeSwitch.java:12: error: incompatible types: void cannot be converted to boolean
  //@ ensures \result ==> System.out.println("branch Foo2");
                                            ^
/home/max/Documents/JMLGPT/tmp/ExSymExeSwitch.java:13: error: 'void' type not allowed here
  //@ ensures !\result ==> System.out.println("branch Foo3000") || System.out.println("default2");
                                             ^
/home/max/Documents/JMLGPT/tmp/ExSymExeSwitch.java:13: error: 'void' type not allowed here
  //@ ensures !\result ==> System.out.println("branch Foo3000") || System.out.println("default2");
                                                                                     ^
3 errors

